# Lab1_sem4

./: README.md
Lab_updated_with_UML/: CMakeLists.txt  DateWithTime.cpp  DateWithTime.h  DifferenceBetweenDateWithTime.cpp  Test.h  Test_Date.cpp  TimeIsNow.cpp  TimeIsNow.h  TimeManagment.cpp  TimeManagment.h  WorkWithDate.h  firstdateform.cpp  firstdateform.h  firstdateform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  showdiffform.cpp  showdiffform.h  showdiffform.ui
build-Lab_updated_with_UML-Desktop_Qt_5_12_7_MSVC2017_32bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Lab_updated_with_UML.cbp  build.ninja  cmake_install.cmake  rules.ninja
build-Lab_updated_with_UML-Desktop_Qt_5_12_7_MSVC2017_32bit-Debug/Lab_updated_with_UML_autogen/: mocs_compilation.cpp
docs/: _date_8h.html  _date_8h_source.html  _date_with_time_8cpp.html  _date_with_time_8h.html  _date_with_time_8h_source.html  _difference_between_date_with_time_8cpp.html  _difference_between_date_with_time_8h.html  _difference_between_date_with_time_8h_source.html  _test_8h_source.html  _time___8h_source.html  _time_is_now_8cpp.html  _time_is_now_8h.html  _time_is_now_8h_source.html  _time_managment_8cpp.html  _time_managment_8h_source.html  _work_with_date_8h.html  _work_with_date_8h_source.html  annotated.html  class_date-members.html  class_date.html  class_date_with_time-members.html  class_date_with_time.html  class_difference_between_date_with_time-members.html  class_difference_between_date_with_time.html  class_first_date_form-members.html  class_first_date_form.html  class_main_window-members.html  class_main_window.html  class_show_diff_form-members.html  class_show_diff_form.html  class_test_runner-members.html  class_test_runner.html  class_time-members.html  class_time.html  class_time_is_now-members.html  class_time_is_now.html  class_time_managment-members.html  class_time_managment.html  classes.html  files.html  (+14 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  (+16 more)
(+15 files in other folders)
